--- a/style.css
+++ b/style.css
@@ -1,22 +1,49 @@
-nav{
-    font:100%/1.5 system-ui;
-    display: flex;
-    margin-bottom: 50px;
-    border-bottom: 1px solid oklch(80% 3% 200);
-    a{
-        display: flex;
-        text-decoration: none;
-        color: inherit;
-        text-align: center;
-        padding: 0.5em;
-    }
-    a.current{
-        border-bottom: 0.4em solid oklch(80% 3% 200);
-        padding-bottom: 0.1em;
-    }
+:root {
+    --color-bg: oklch(100% 0.00011 271.152);
+    --color-text: oklch(0% 0 0);
+    --color-border: oklch(80% 3% 200);
+    --color-accent: oklch(87.266% 0.07276 351.978 / 0.87);
 }
 
-body{
+:root[data-theme="dark"] {
+    --color-bg: oklch(20% 5% 220);
+    --color-text: oklch(95% 2% 220);
+    --color-border: oklch(60% 3% 200);
+    --color-accent: oklch(70% 60% 40);
+}
+
+html {
+    background-color: var(--color-bg);
+    color: var(--color-text);
+    accent-color: var(--color-accent);
+}
+
+nav {
+    font: 100%/1.5 system-ui;
+    display: flex;
+    margin-bottom: 50px;
+    border-bottom: 1px solid var(--color-border);
+}
+
+nav a {
+    display: flex;
+    text-decoration: none;
+    color: inherit;
+    text-align: center;
+    padding: 0.5em;
+}
+
+a.current {
+    border-bottom: 0.4em solid oklch(81.177% 0.13863 342.95);
+    padding-bottom: 0.1em;
+}
+
+nav a:hover {
+    border-bottom: 0.4em solid var(--color-accent);
+    padding-bottom: 0.1em;
+}
+
+body {
     font: 100%/1.5 system-ui;
     max-width: 100ch;
     margin-inline: auto;
